--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 clap = { version = "4.1", features = ["derive"] }
 tree-sitter = "0.20"
 tree-sitter-javascript = "0.20"
+
+[build-dependencies]
+cc = "1.0"
+tree-sitter = "0.20"
+tree-sitter-cli = "0.20"
